# primitives-to-image-translator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cpp_build.sh  image-creator.cpp  image-creator.hpp  primitives.cpp  primitives.hpp
include/: concepts.hpp  image-creator.hpp  primitives.hpp
source/: extract_primitives.cpp  image-creator.cpp  primitives.cpp  supply.cpp  supply.hpp
